deploy/k8s/routes/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ${NAME}-reference-grant
  namespace: ${NAMESPACE}
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik
  to:
  - group: ""
    kind: Service
    name: ${SERVICE_NAME}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${NAME}-httproute
  namespace: traefik
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    kind: Gateway
    sectionName: websecure
  hostnames:
  - ${HOSTNAME}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ${SERVICE_NAME}
      namespace: ${NAMESPACE}
      port: ${PORT}
      kind: Service
      weight: 100
