deploy/k8s/routes/test.yaml
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: chess-bot-test-route
  namespace: chess-bot
spec:
  parentRefs:
    - name: chess-bot-server
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
      - path:
          value: "/"
          type: "PathPrefix"
